[[bin]]
name = "sedeve_player"
path = "src/player/bin/main.rs"

[[bin]]
name = "sedeve_trace_gen"
path = "src/trace_gen/main.rs"


[package]
name = "sedeve-kit"
version = "0.0.1"
edition = "2021"
authors = ["Guo Hua <guohua16@outlook.com>"]
description = "ScupT Specification-Driven Development Kit"
repository = "https://github.com/scuptio/sedeve-kit/"
homepage = "https://github.com/scuptio/"
documentation = "https://github.com/scuptio/sedeve-kit/README.md"
readme = "README.md"
license = "Apache-2.0"

[features]
for-fuzz  = []

[dependencies]
scupt-util = { git = "https://github.com/scuptio/scupt-util.git" }
scupt-net = { git = "https://github.com/scuptio/scupt-net.git" }


clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
substring = "1.4.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.14"
log = "0.4.17"
project-root = "0.2.2"
bincode = "2.0.0-rc.3"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = { version = "1.0.114", features = ["std", "arbitrary_precision", "preserve_order"] }
uuid = "1.2.2"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rand = "0.8.5"
lazy_static = "1.4.0"
rust-format = "0.3.4"
scc = "2.0.1"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
async-trait = "0.1.77"
async_fn_traits = "0.1.1"
byteorder = "1.5.0"
bytes = "1.5.0"
futures = "0.3.30"
serde_bytes = "0.11.7"
console-subscriber = "0.2.0"
async-backtrace = "0.2.7"
once_cell = "1.19.0"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
md-5 = { version = "0.10.6" }
toml = "0.8.12"
hex = "0.4.3"


