[package]
name = "tree-sitter-label-tla"
description = "tla+plus output label grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "dot"]
categories = ["parsing", "text-editors"]
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = { git = "https://github.com/scuptio/tree-sitter" }


[build-dependencies]
cc = "1.0"
