[package]
name = "automata_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "automata_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
num = "0.4.1"
sedeve-kit = {path = "../../" }
scupt-util = { git = "https://github.com/scuptio/scupt-util.git" }